Modernize orchestration engine security and supply chain