@@ -9,12 +9,14 @@ import java.util.List;
 import java.util.Map;
 
 import org.jooq.DSLContext;
+import org.jooq.Field;
 import org.jooq.ForeignKey;
 import org.jooq.Table;
 import org.jooq.TableField;
 import org.jooq.TableRecord;
 import org.jooq.UniqueKey;
 import org.jooq.UpdatableRecord;
+import org.jooq.impl.DSL;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -22,8 +24,11 @@ public class JooqUtils {
 
     private static final Logger log = LoggerFactory.getLogger(JooqUtils.class);
 
-    @SuppressWarnings("unchecked")
     public static <T extends UpdatableRecord<?>> T findById(DSLContext context, Class<T> clz, Object id) {
+        return clz.cast(findRecordById(context, clz, id));
+    }
+
+    public static UpdatableRecord<?> findRecordById(DSLContext context, Class<?> clz, Object id) {
         if (id == null)
             return null;
 
@@ -35,40 +40,37 @@ public class JooqUtils {
         if (key == null || key.getFieldsArray().length != 1)
             return null;
 
-        TableField<?, Object> keyField = (TableField<?, Object>) key.getFieldsArray()[0];
+        TableField<?, ?> keyField = key.getFieldsArray()[0];
 
-        /* Convert object because we are abusing type safety here */
-        Object converted = keyField.getDataType().convert(id);
+        return UpdatableRecord.class.cast(context.selectFrom(table).where(primaryKeyCondition(keyField, id)).fetchOne());
+    }
 
-        return (T) context.selectFrom(table).where(keyField.eq(converted)).fetchOne();
+    private static <R extends org.jooq.Record, T> org.jooq.Condition primaryKeyCondition(TableField<R, T> keyField, Object id) {
+        return keyField.eq(DSL.val(id, keyField));
     }
 
     public static Table<?> getTable(SchemaFactory schemaFactory, Class<?> clz) {
         return getTableFromRecordClass(getRecordClass(schemaFactory, clz));
     }
 
-    @SuppressWarnings("unchecked")
     public static Table<?> getTableFromRecordClass(Class<?> clz) {
         if (clz == null)
             return null;
 
         if (TableRecord.class.isAssignableFrom(clz)) {
             try {
-                TableRecord<?> record = ((Class<TableRecord<?>>) clz).newInstance();
+                TableRecord<?> record = TableRecord.class.cast(clz.getDeclaredConstructor().newInstance());
                 return record.getTable();
-            } catch (InstantiationException e) {
-                log.error("Failed to determine table for [{}]", clz, e);
-            } catch (IllegalAccessException e) {
+            } catch (ReflectiveOperationException e) {
                 log.error("Failed to determine table for [{}]", clz, e);
             }
         }
         return null;
     }
 
-    @SuppressWarnings("unchecked")
-    public static Class<UpdatableRecord<?>> getRecordClass(SchemaFactory factory, Class<?> clz) {
+    public static Class<?> getRecordClass(SchemaFactory factory, Class<?> clz) {
         if (UpdatableRecord.class.isAssignableFrom(clz)) {
-            return (Class<UpdatableRecord<?>>) clz;
+            return clz.asSubclass(UpdatableRecord.class);
         }
 
         if (factory != null) {
@@ -78,32 +80,33 @@ public class JooqUtils {
                 if (!UpdatableRecord.class.isAssignableFrom(testClz)) {
                     throw new IllegalArgumentException("Class [" + testClz + "] is not an instanceof UpdatableRecord");
                 }
-                return (Class<UpdatableRecord<?>>) testClz;
+                return testClz.asSubclass(UpdatableRecord.class);
             }
         }
 
         throw new IllegalArgumentException("Failed to find UpdatableRecord class for [" + clz + "]");
     }
 
-    public static UpdatableRecord<?> getRecord(Class<UpdatableRecord<?>> clz) {
+    public static UpdatableRecord<?> getRecord(Class<?> clz) {
         try {
-            return clz.newInstance();
-        } catch (InstantiationException e) {
-            throw new IllegalStateException("Failed to instantiate [" + clz + "]", e);
-        } catch (IllegalAccessException e) {
+            return UpdatableRecord.class.cast(clz.getDeclaredConstructor().newInstance());
+        } catch (ReflectiveOperationException e) {
             throw new IllegalStateException("Failed to instantiate [" + clz + "]", e);
         }
     }
 
-    @SuppressWarnings("unchecked")
-    public static <T extends UpdatableRecord<?>> T getRecordObject(Object obj) {
+    public static UpdatableRecord<?> getRecordObject(Object obj) {
         if (obj == null)
             return null;
 
         if (obj instanceof UpdatableRecord<?>) {
-            return (T) obj;
+            return UpdatableRecord.class.cast(obj);
         }
         throw new IllegalArgumentException("Expected instance of [" + UpdatableRecord.class + "] got [" + obj.getClass() + "]");
+    }
+
+    public static <T extends UpdatableRecord<?>> T getRecordObject(Object obj, Class<T> type) {
+        return type.cast(getRecordObject(obj));
     }
 
     public static org.jooq.Condition toConditions(ObjectMetaDataManager metaData, String type, Map<Object, Object> criteria) {
@@ -112,7 +115,7 @@ public class JooqUtils {
         for (Map.Entry<Object, Object> entry : criteria.entrySet()) {
             Object value = entry.getValue();
             Object key = entry.getKey();
-            TableField<?, Object> field = null;
+            TableField<?, ?> field = null;
             if (key == org.jooq.Condition.class) {
                 if (!(value instanceof org.jooq.Condition)) {
                     throw new IllegalArgumentException("If key is Condition, value must be an instanceof Condition got key [" + key +
@@ -136,7 +139,7 @@ public class JooqUtils {
             } else if (value == null) {
                 newCondition = field.isNull();
             } else {
-                newCondition = field.eq(value);
+                newCondition = fieldEqualsValue(field, value);
             }
 
             if (existingCondition == null) {
@@ -149,14 +152,29 @@ public class JooqUtils {
         return existingCondition;
     }
 
-    @SuppressWarnings("unchecked")
-    public static TableField<?, Object> getTableField(ObjectMetaDataManager metaData, String type, Object key) {
+    public static TableField<?, ?> getTableField(ObjectMetaDataManager metaData, String type, Object key) {
         Object objField = metaData.convertFieldNameFor(type, key);
-        if (objField instanceof TableField) {
-            return (TableField<?, Object>) objField;
+        if (objField instanceof TableField<?, ?> field) {
+            return field;
         } else {
             return null;
         }
+    }
+
+    public static org.jooq.Condition fieldEquals(Field<?> left, Field<?> right) {
+        return DSL.condition("{0} = {1}", left, right);
+    }
+
+    public static org.jooq.Condition fieldEqualsValue(TableField<?, ?> field, Object value) {
+        return equalValue(field, value);
+    }
+
+    public static org.jooq.Condition fieldNotEqualsValue(TableField<?, ?> field, Object value) {
+        return notEqualValue(field, value);
+    }
+
+    private static <R extends org.jooq.Record, T> org.jooq.Condition equalValue(TableField<R, T> field, Object value) {
+        return field.eq(DSL.val(value, field));
     }
 
     /**
@@ -177,51 +195,52 @@ public class JooqUtils {
       return false;
     }
 
-    protected static org.jooq.Condition listToCondition(TableField<?, Object> field, List<?> list) {
+    protected static org.jooq.Condition listToCondition(TableField<?, ?> field, List<?> list) {
         org.jooq.Condition condition = null;
         for (Object value : list) {
             if (value instanceof Condition) {
                 org.jooq.Condition newCondition = toCondition(field, (Condition) value);
                 condition = condition == null ? newCondition : condition.and(newCondition);
             } else {
-                condition = condition == null ? field.eq(value) : condition.and(field.eq(value));
+                org.jooq.Condition newCondition = fieldEqualsValue(field, value);
+                condition = condition == null ? newCondition : condition.and(newCondition);
             }
         }
 
         return condition;
     }
 
-    protected static org.jooq.Condition toCondition(TableField<?, Object> field, Condition value) {
+    protected static org.jooq.Condition toCondition(TableField<?, ?> field, Condition value) {
         Condition condition = value;
         switch (condition.getConditionType()) {
         case EQ:
-            return field.eq(condition.getValue());
+            return fieldEqualsValue(field, condition.getValue());
         case GT:
-            return field.gt(condition.getValue());
+            return greaterThanValue(field, condition.getValue());
         case GTE:
-            return field.ge(condition.getValue());
+            return greaterOrEqualValue(field, condition.getValue());
         case IN:
             List<Object> values = condition.getValues();
             if (values.size() == 1) {
-                return field.eq(values.get(0));
+                return fieldEqualsValue(field, values.get(0));
             } else {
                 return field.in(condition.getValues());
             }
         case NOTIN:
             List<Object> vals = condition.getValues();
             if (vals.size() == 1) {
-                return field.ne(vals.get(0));
+                return notEqualValue(field, vals.get(0));
             } else {
                 return field.notIn(condition.getValues());
             }
         case LIKE:
             return field.like(condition.getValue().toString());
         case LT:
-            return field.lt(condition.getValue());
+            return lessThanValue(field, condition.getValue());
         case LTE:
-            return field.le(condition.getValue());
+            return lessOrEqualValue(field, condition.getValue());
         case NE:
-            return field.ne(condition.getValue());
+            return notEqualValue(field, condition.getValue());
         case NOTLIKE:
             return field.notLike(condition.getValue().toString());
         case NOTNULL:
@@ -235,6 +254,26 @@ public class JooqUtils {
         default:
             throw new IllegalArgumentException("Invalid condition type [" + condition.getConditionType() + "]");
         }
+    }
+
+    private static <R extends org.jooq.Record, T> org.jooq.Condition notEqualValue(TableField<R, T> field, Object value) {
+        return field.ne(DSL.val(value, field));
+    }
+
+    private static <R extends org.jooq.Record, T> org.jooq.Condition greaterThanValue(TableField<R, T> field, Object value) {
+        return field.gt(DSL.val(value, field));
+    }
+
+    private static <R extends org.jooq.Record, T> org.jooq.Condition greaterOrEqualValue(TableField<R, T> field, Object value) {
+        return field.ge(DSL.val(value, field));
+    }
+
+    private static <R extends org.jooq.Record, T> org.jooq.Condition lessThanValue(TableField<R, T> field, Object value) {
+        return field.lt(DSL.val(value, field));
+    }
+
+    private static <R extends org.jooq.Record, T> org.jooq.Condition lessOrEqualValue(TableField<R, T> field, Object value) {
+        return field.le(DSL.val(value, field));
     }
 
 }
